turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:7: error: value colors is not a member of object java.awt.Color
      setCouleurBrosse(Color.colors(0))
                             ^LangtonsAnt:14: error: value colors is not a member of object java.awt.Color
      setCouleurBrosse(Color.colors(0))
                             ^LangtonsAnt:23: error: value colors is not a member of object java.awt.Color
          setCouleurBrosse(Color.colors(i+1))
                                 ^LangtonsAnt:26: error: not found: value L
        }else if (rule(i)==L){
                           ^LangtonsAnt:27: error: value colors is not a member of object java.awt.Color
          setCouleurBrosse(Color.colors(i+1))
                                 ^